<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="shortcut_listen"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_listen_short"
        android:shortcutLongLabel="@string/shortcut_listen_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example"
            android:targetClass="com.example.MainActivity"
            android:data="jarvis://control?action=listen" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_briefing"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_briefing_short"
        android:shortcutLongLabel="@string/shortcut_briefing_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example"
            android:targetClass="com.example.MainActivity"
            android:data="jarvis://control?action=briefing" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_flashlight"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_flashlight_short"
        android:shortcutLongLabel="@string/shortcut_flashlight_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example"
            android:targetClass="com.example.MainActivity"
            android:data="jarvis://control?action=flashlight" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_diagnostics"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_diagnostics_short"
        android:shortcutLongLabel="@string/shortcut_diagnostics_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example"
            android:targetClass="com.example.MainActivity"
            android:data="jarvis://navigate?tab=diagnostics" />
    </shortcut>

</shortcuts>
